Test improvmeents to set API key to empty string rather than null.